Fix Netlify Forms: Add static form for detection and use FormData submission

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 </head>
 
 <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-50 transition-colors duration-300">
+  <!-- Static form for Netlify detection -->
+  <form name="contact" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
+    <input type="hidden" name="form-name" value="contact" />
+    <input name="bot-field" />
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
